fixing large breakpoint full grid spacing

--- a/less/app.less
+++ b/less/app.less
@@ -662,7 +662,8 @@ h3 {
         .make-row();
         margin-bottom: 10px;
         @media @screen-small-above {
-            margin: 10px 0 10px 0;
+            margin-top: 10px;
+            margin-bottom: 10px;
         }
         
         .full-grid {
